Improved replays loading